# JumpingWindows

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  pass.cpp
